completed feature generator